# chat

./: README.md  pyproject.toml
backend/config/: settings.py
frontend/: index.html
frontend/src/components/: ChatRoom.jsx
ws-chat/: main.py  router_socket.py
