[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "fastapi>=0.115.12",
    "python-jose>=3.4.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]
